# es-movies

./: README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  runner.sh
src/: container.py  main.py  settings.py
src/application/: controllers.py
src/application/templates/: index.html
src/domain/: interfaces.py  model.py  repository.py  services.py
src/infra/repositories/: es.py  movies.py
src/tests/: conftest.py  fakes.py  test_controllers.py
